cria retoro de cidades e classes
